ulynks/docs#42 ulynks/docs#38 provisory backgrounds for visibility
@JV-conseil scss not reflecting ... if necessary for EARMA: change to "bg-white opacity-75"

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,7 +34,7 @@
       <h1 class="fw-bold">Organizations that trust us</h1>
       <p class="text-muted lead">Here are some of our ongoing collaborations with academic institutions and
         organizations.</p>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 text-center align-items-center">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 text-center align-items-center bg-secondary">
         {{ $_brand := slice
           (dict
             "src" "sdu"
