--- a/themes/ulynks/assets/scss/8-carousel.scss
+++ b/themes/ulynks/assets/scss/8-carousel.scss
@@ -32,6 +32,11 @@
   height: 32rem;
 }
 
+/* White with 75% opacity */
+.bg-white-75 {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
