--- a/layouts/shortcodes/wavelinks-featurettes.html
+++ b/layouts/shortcodes/wavelinks-featurettes.html
@@ -70,7 +70,7 @@
     <div class="col-md-6 offset-md-3 text-center">
       <img src="/portfolio/wavelinks-dashboard.svg" alt="WaveLinks features"
         class="bd-img bd-img-lg featurette-image img-fluid mx-auto">
-      <a class="btn btn-primary me-2 mt-4" href="/portfolio/wavelinks/" role="button">Get started</a>
+      <a class="btn btn-primary me-2 mt-4" href="https://www.wavelinks.eu/" role="button">Get started</a>
     </div>
   </div>
 </div>
