--- a/themes/ulynks/assets/scss/8-carousel.scss
+++ b/themes/ulynks/assets/scss/8-carousel.scss
@@ -36,6 +36,12 @@
   height: 32rem;
 }
 
+.img-vertical-center {
+  vertical-align: middle;
+  display: inline-block;
+  margin: 0 auto;
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
