ulynks/docs#34 styling adaptation and run task assets

--- a/themes/ulynks/assets/scss/2-variable-overrides.scss
+++ b/themes/ulynks/assets/scss/2-variable-overrides.scss
@@ -5,7 +5,7 @@ $orange: #e07e3c !default;
 $brown: #4A1E00 !default;
 // $primary:       $blue !default;
 $primary: $orange !default;
-$secondary-light: $brown !default;
+$secondary: $brown !default;
 
 // Typography
 //
