ulynks/docs#44 `static/home/sdu-black.png`

--- a/layouts/partials/contact-us-inspiration-struck.html
+++ b/layouts/partials/contact-us-inspiration-struck.html
@@ -8,7 +8,7 @@
       <br />
       Get in touch to discuss your project.
     </p>
-    <a class="btn btn-secondary me-2 my-3" href="mailto:{{ .Site.Params.contact.email }}" role="button">Contact us</a>
+    <a class="btn btn-primary me-2 my-3" href="mailto:{{ .Site.Params.contact.email }}" role="button">Contact us</a>
     <p>We are excited to work with you to develop a web app tailored to your unique needs.</p>
   </div>
 </div>
