--- a/layouts/shortcodes/sdu-rio-analytics-funding-web-apps-v1.html
+++ b/layouts/shortcodes/sdu-rio-analytics-funding-web-apps-v1.html
@@ -76,7 +76,7 @@
       <h2 class="fw-normal">Heading</h2>
       <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
         column.</p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      <p><a class="btn btn-primary" href="#">View details »</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
@@ -87,7 +87,7 @@
       <h2 class="fw-normal">Heading</h2>
       <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
       </p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      <p><a class="btn btn-primary" href="#">View details »</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
@@ -97,7 +97,7 @@
       </svg>
       <h2 class="fw-normal">Heading</h2>
       <p>And lastly this, the third column of representative placeholder content.</p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      <p><a class="btn btn-primary" href="#">View details »</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 
