--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -17,10 +17,10 @@
 
         <div class="col">
           <h5>Address</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item text-body-secondary">Cortex Park 26</li>
-            <li class="nav-item text-body-secondary">Room 3.2.19</li>
-            <li class="nav-item text-body-secondary">DK-5230 Odense M</li>
+          <ul class="nav flex-column text-body-secondary">
+            <li class="nav-item">Cortex Park 26</li>
+            <li class="nav-item">Room 3.2.19</li>
+            <li class="nav-item">DK-5230 Odense M</li>
           </ul>
         </div>
 
@@ -31,6 +31,14 @@
                 href="mailto:{{ .Site.Params.contact.email }}">eMail&nbsp;<i class="bi bi-envelope-fill"></i></a>
             </li>
           </ul>
+        </div>
+
+        <div class="col text-dark text-start">
+          {{/* <img src="/logo/ulynks-logo-color-no-text.png" alt="uLynks" class="img-fluid" width="200"> */}}
+          <ul class="nav flex-column">
+            <li class="nav-item">uLynks is a brand of</li>
+          </ul>
+          <img src="/home/sdu-black.png" alt="University of Southern Denmark (SDU)">
         </div>
 
         <div class="col text-end">
