--- a/themes/ulynks/assets/scss/8-custom.scss
+++ b/themes/ulynks/assets/scss/8-custom.scss
@@ -9,3 +9,7 @@ img {
   --bs-tooltip-bg: var(--bs-orange);
   --bs-tooltip-color: var(--bs-black);
 }
+
+.link-underline-none {
+  text-decoration: none;
+}
