--- a/layouts/partials/expertise.html
+++ b/layouts/partials/expertise.html
@@ -16,8 +16,8 @@
   {{ end }}
 
   <div class="card-group py-2">
-    <a class="link-dark" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip"
-      data-bs-title="Open our page on {{ .LinkTitle }}">
+    <a class="link-underline-none" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip"
+      data-bs-toggle="tooltip" data-bs-title="Open our page on {{ .LinkTitle }}">
       <div class="card h-100">
         <div class="card-body">
           <p class="fs-1 mb-0"><i class="bi bi-{{ $icon }}"></i></p>
