--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -22,7 +22,7 @@
             <h2 class="card-title">{{ .LinkTitle }}</h2>
             <p class="card-text">{{ .Summary | safeHTML | truncate 100 }}</p>
           </div>
-          <div class="card-footer bg-transparent py-3">
+          <div class="card-footer bg-transparent border-0 py-3">
             <a class="btn btn-primary me-2" href="{{ .RelPermalink }}" role="button"><i
                 class="bi bi-person-fill"></i></a>
             <a class="btn btn-primary me-2" href="{{ .Params.linkedin }}" role="button"><i
