--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,7 +79,7 @@
 
         {{ range $_brand }}
         <div class="col py-3">
-          <a href="https://{{ .href }}"><img class="img-fluid" src="/home/dark/{{ .src }}.svg" alt="{{ .src }}"></a>
+          <a href="https://{{ .href }}"><img height="300" src="/home/dark/{{ .src }}.svg" alt="{{ .src }}"></a>
         </div>
         {{ end }}
       </div>
