--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -33,12 +33,12 @@
           </ul>
         </div>
 
-        <div class="col text-dark text-start">
+        <div class="col text-start">
           {{/* <img src="/logo/ulynks-logo-color-no-text.png" alt="uLynks" class="img-fluid" width="200"> */}}
           <ul class="nav flex-column">
             <li class="nav-item">uLynks is a brand of</li>
           </ul>
-          <img src="/home/sdu-black.png" alt="University of Southern Denmark (SDU)">
+          <img src="/footer/dark/sdu-logo-with-text.svg" alt="University of Southern Denmark (SDU)">
         </div>
 
         <div class="col text-end">
