ulynks/docs#31 minor typos fixed

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,9 +31,9 @@
     </div>
 
     <div class="mt-5 mb-5">
-      <h1 class="fw-bold">Organizations that trust us</h1>
+      <h1 class="fw-bold">Organisations that trust us</h1>
       <p class="text-muted lead">Here are some of our ongoing collaborations with academic institutions and
-        organizations.</p>
+        organisations.</p>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-gap-5 text-center align-items-center">
         {{ $_brand := slice
           (dict
