ulynks/docs#43 Reopening https://ulynks.sdu.dk

--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -38,7 +38,8 @@
           <ul class="nav flex-column">
             <li class="nav-item">uLynks is a brand of</li>
           </ul>
-          <img src="/footer/dark/sdu-logo-with-text.svg" alt="University of Southern Denmark (SDU)">
+          <a href="https://www.sdu.dk/en" target="_blank" title="University of Southern Denmark (SDU)"><img
+              src="/footer/dark/sdu-logo-with-text.svg" alt="University of Southern Denmark (SDU)"></a>
         </div>
 
         <div class="col text-end">
