ulynks/docs#9 YERUN Enhanced Featurette ulynks/docs#6 ulynks/docs#36

--- a/themes/ulynks/assets/scss/app.scss
+++ b/themes/ulynks/assets/scss/app.scss
@@ -75,4 +75,5 @@ $theme-colors: map-merge($theme-colors, $colors);
 @import "8-carousel";
 @import "8-custom";
 @import "8-color-mode-switch";
+@import "8-featurette";
 @import "8-fonts";
