--- a/layouts/shortcodes/connect-by-yerun-v1.html
+++ b/layouts/shortcodes/connect-by-yerun-v1.html
@@ -3,12 +3,12 @@
 <!-- START THE FEATURETTES -->
 <div class="container marketing">
 
-  <div class="row featurette">
+  <div class="row">
 
     {{/* <div class="col-md-7 order-md-1">  */}}
     <div class="col-md-12 order-md-1">
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Comprehensive platform for EU funding opportunities and research
+      <div class="row">
+        <h3 class="fw-normal lh-1">Comprehensive platform for EU funding opportunities and research
           insights</h3>
         <p class="lead">Connect by YERUN curates over 6000 past and future EU calls for funding, 800,000 publications
           from over 30,000 researchers in a single searchable relational database.
@@ -17,15 +17,15 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">AI-powered matchmaking</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">AI-powered matchmaking</h3>
         <p class="lead">It uses different AI techniques to synthesise information as well compare and match profiles and
           interests.</p>
       </div>
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Stay informed and up-to-date</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">Stay informed and up-to-date</h3>
         <p class="lead">
           The database is updated both regularly and on demand.</p>
       </div>
@@ -33,7 +33,7 @@
 
     {{/* <div class="col-md-5 order-md-2">
       <img src="/portfolio/wavelinks-features.svg" alt="Connect by YERUN features"
-        class="bd-img bd-img-lg featurette-image img-fluid mx-auto">
+        class="bd-img bd-img-lg img-fluid mx-auto">
     </div>  */}}
   </div>
 
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center">
       <img src="/portfolio/connect-by-yerun-sample.svg" alt="Connect by YERUN features"
-        class="bd-img bd-img-lg featurette-image img-fluid mx-auto">
+        class="bd-img bd-img-lg img-fluid mx-auto">
       <a class="btn btn-primary me-2 mt-4" href="https://www.connect-by-yerun.eu/" role="button">Get started</a>
     </div>
   </div>
