ulynks/docs#6 CSS clean-up 🧼

--- a/layouts/shortcodes/sdu-rio-analytics-funding-web-apps.html
+++ b/layouts/shortcodes/sdu-rio-analytics-funding-web-apps.html
@@ -65,7 +65,7 @@
   ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
-<div class="container marketing">
+<div class="container">
 
   <!-- Three columns of text below the carousel -->
   {{/*
@@ -109,9 +109,9 @@
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
+      <h2 class="fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
           opportunities.</span></h2>
       <p class="lead">
       <ul>
@@ -124,15 +124,15 @@
       </p>
     </div>
     <div class="col-md-5">
-      <img src="/portfolio/sdu/call-finder.svg" class="d-block w-100" alt="Call Finder">
+      <img src="/portfolio/sdu-rio-analytics-funding-web-apps/call-finder.svg" class="d-block w-100" alt="Call Finder">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
+      <h2 class="fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
           opportunities</span></h2>
       <p class="lead">
       <ul>
@@ -150,9 +150,9 @@
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
+      <h2 class="fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
           opportunities</span></h2>
       <p class="lead">
       <ul>
