--- a/layouts/shortcodes/wavelinks-featurettes.html
+++ b/layouts/shortcodes/wavelinks-featurettes.html
@@ -1,13 +1,13 @@
 {{ if strings.ContainsNonSpace .Inner }}
 
 <!-- START THE FEATURETTES -->
-<div class="container marketing">
+<div class="container">
 
-  <div class="row featurette">
+  <div class="row">
 
     <div class="col-md-7 order-md-1">
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Decide what you want to see</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">Decide what you want to see</h3>
         <p class="lead">With a personalized dashboard, you are able to select the information that is most relevant to
           you
           so that you are up to date in your interest field
@@ -16,8 +16,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Make powerful searches</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">Make powerful searches</h3>
         <p class="lead">You can use long texts to find what you are looking for, while still being able to use filters
           and
           keywords.</p>
@@ -25,8 +25,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Save your interests</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">Save your interests</h3>
         <p class="lead">That projects is very interesting and you want to save it to have a better look at it later? Is
           this
           stakeholder a possible partner for a future project but you don’t have the time to call them right now? Just
@@ -36,8 +36,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">Get suggestions</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">Get suggestions</h3>
         <p class="lead">According to what you save in your profile the app will suggest some more projects, events or
           people
           you might be interested in. We also send you notification so that you don’t miss anything.</p>
@@ -45,8 +45,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <h3 class="featurette-heading fw-normal lh-1">We use your feedback</h3>
+      <div class="row">
+        <h3 class="fw-normal lh-1">We use your feedback</h3>
         <p class="lead">Just by clicking on a thumbs up or down button, your feedback will help us to improve the app
           and
           make sure each search and suggestion gives you valuable information.</p>
@@ -54,8 +54,7 @@
     </div>
 
     <div class="col-md-5 order-md-2">
-      <img src="/portfolio/wavelinks-features.svg" alt="WaveLinks features"
-        class="bd-img bd-img-lg featurette-image img-fluid mx-auto">
+      <img src="/portfolio/wavelinks-features.svg" alt="WaveLinks features" class="bd-img bd-img-lg img-fluid mx-auto">
     </div>
   </div>
 
@@ -68,8 +67,7 @@
 <div class="container my-3">
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center">
-      <img src="/portfolio/wavelinks-dashboard.svg" alt="WaveLinks features"
-        class="bd-img bd-img-lg featurette-image img-fluid mx-auto">
+      <img src="/portfolio/wavelinks-dashboard.svg" alt="WaveLinks features" class="bd-img bd-img-lg img-fluid mx-auto">
       <a class="btn btn-primary me-2 mt-4" href="https://www.wavelinks.eu/" role="button">Get started</a>
     </div>
   </div>
