ulynks/docs#9 portfolio/connect-by-yerun/connect-by-yerun-sample.svg

--- a/layouts/shortcodes/connect-by-yerun.html
+++ b/layouts/shortcodes/connect-by-yerun.html
@@ -68,19 +68,28 @@
         </div>
 
       </div>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img src="/portfolio/connect-by-yerun/meeting.webp" class="d-block w-100" alt="CONNECT BY YERUN">
+    </div>
+  </div>
 
-      <h2 class="py-4">Who is it for?</h2>
+  <hr class="featurette-divider">
+
+  <div class="row">
+    <div class="col-md-5">
+      <h2 class="pb-4">Who is it for?</h2>
       <p>CONNECT BY YERUN is a platform developed for the researchers and research managers of
         the 23 universities that are part of the <a href="https://www.yerun.eu/" target="_blank"
           rel="noopener noreferrer">Young European Research Universities Network (YERUN)</a>.</p>
       <p>All researchers with an ORCID ID can login but only the ones that are part of the 23 Universities will be able
         to take the most out of the platform.</p>
-
     </div>
-    <div class="col-md-5 order-md-1">
-      <img src="/portfolio/connect-by-yerun/meeting.webp" class="d-block w-100" alt="Call Finder">
+    <div class="col-md-7">
+      <img src="/portfolio/connect-by-yerun/connect-by-yerun-sample.svg" class="d-block w-100" alt="CONNECT BY YERUN">
     </div>
   </div>
+
 
   <hr class="featurette-divider">
 
@@ -104,6 +113,9 @@
         web application.</p>
     </dd>
   </dl>
+
+
+
 
 </div><!-- /.container -->
 
