ulynks/docs#38 images reordering & clean-up 🧼

--- a/layouts/shortcodes/wavelinks-featurettes.html
+++ b/layouts/shortcodes/wavelinks-featurettes.html
@@ -54,7 +54,8 @@
     </div>
 
     <div class="col-md-5 order-md-2">
-      <img src="/portfolio/wavelinks-features.svg" alt="WaveLinks features" class="bd-img bd-img-lg img-fluid mx-auto">
+      <img src="/portfolio/wavelinks/wavelinks-features.svg" alt="WaveLinks features"
+        class="bd-img bd-img-lg img-fluid mx-auto">
     </div>
   </div>
 
@@ -67,7 +68,8 @@
 <div class="container my-3">
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center">
-      <img src="/portfolio/wavelinks-dashboard.svg" alt="WaveLinks features" class="bd-img bd-img-lg img-fluid mx-auto">
+      <img src="/portfolio/wavelinks/wavelinks-dashboard.svg" alt="WaveLinks features"
+        class="bd-img bd-img-lg img-fluid mx-auto">
       <a class="btn btn-primary me-2 mt-4" href="https://www.wavelinks.eu/" role="button">Get started</a>
     </div>
   </div>
