ulynks/docs#24 Open Graph Protocol (OGP)
Make your website shareable on LinkedIn
https://www.linkedin.com/help/linkedin/answer/a521928

--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -21,7 +21,7 @@
   <meta property="twitter:title" content="{{ $title }}">
 
   {{ $image := or .Params.Image "/favicon/apple-touch-icon.png" }}
-  <meta property="og:image" content="{{ $image }}">
+  <meta property="og:image" content="{{ .Permalink }}{{ $image }}">
 
   {{ hugo.Generator }}
 
