--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {{ $title := print .Title " | " .Site.Title }}
-  {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+  {{ if .IsHome }} {{ $title = .Site.Title }} {{ end }}
   <title>{{ $title }}</title>
 
   <!-- Open Graph Protocol (OGP) -->
@@ -12,13 +12,16 @@
   <meta name="author" content="{{ $title }}">
   {{ $description := or .Description .Summary .Site.Params.description .Site.Params.subtitle }}
   <meta name="description" property="og:description" content="{{ $description }}" />
-  <meta property="og:image" content="{{ substr .Permalink 0 -1 }}{{ .Params.Image }}" />
-  <meta property="og:image" content="{{ substr .Permalink 0 -1 }}{{ .Site.Params.image }}" />
+  {{ $image := or .Params.Image .Site.Params.image }}
+  {{ if .IsHome }} {{ $image = .Site.Params.image }} {{ end }}
+  {{ $image = (printf "%s%s" (substr .Permalink 0 -1) $image ) }}
+  <meta property="og:image" content="{{ $image }}" />
   <meta name="title" property="og:title" content="{{ $title }}" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="{{ $title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ .Permalink }}" />
+
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:title" content="{{ $title }}" />
 
