--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -3,6 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Content Security Policy (CSP) -->
+
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; connect-src 'self' https://eu.umami.is https://api-gateway.umami.dev; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://*; script-src 'self' https://eu.umami.is; style-src 'self' https://fonts.googleapis.com">
+
   <!-- HTML Meta Tags -->
 
   {{ $title := print .Title " | " .Site.Title }}
