--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -6,7 +6,7 @@
   <!-- Content Security Policy (CSP) -->
 
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; connect-src 'self' https://eu.umami.is https://api-gateway.umami.dev; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://*; script-src 'self' https://eu.umami.is; style-src 'self' https://fonts.googleapis.com">
+    content="default-src 'self'; connect-src 'self' https://eu.umami.is https://api-gateway.umami.dev; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; img-src 'self' https://*; script-src 'self' https://eu.umami.is; style-src 'self' https://fonts.googleapis.com">
 
   <!-- HTML Meta Tags -->
 
