#168 Cross-origin isolation (COOP and COEP)

--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -3,10 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Content Security Policy (CSP) -->
+  <!-- Content Security Policy (CSP) --
 
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self'; connect-src 'self' https://eu.umami.is https://api-gateway.umami.dev; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; img-src 'self' https://*; script-src 'self' https://eu.umami.is; style-src 'self' https://fonts.googleapis.com">
+
+  -->
 
   <!-- HTML Meta Tags -->
 
