--- a/layouts/partials/expertise.html
+++ b/layouts/partials/expertise.html
@@ -16,16 +16,16 @@
   {{ end }}
 
   <div class="card-group py-2">
-    <a class="link-underline-none" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip"
-      data-bs-toggle="tooltip" data-bs-title="Open our page on {{ .LinkTitle }}">
-      <div class="card h-100">
-        <div class="card-body">
-          <p class="fs-1 mb-0"><i class="bi bi-{{ $icon }}"></i></p>
-          <h5 class="card-title fw-bold">{{ .LinkTitle }}</h5>
-          <p class="card-text">{{ .Description | safeHTML | truncate 150 }}</p>
-        </div>
+    {{/* <a class="link-underline-none" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip"
+    data-bs-toggle="tooltip" data-bs-title="Open our page on {{ .LinkTitle }}"> */}}
+    <div class="card h-100">
+      <div class="card-body">
+        <p class="fs-1 mb-0"><i class="bi bi-{{ $icon }}"></i></p>
+        <h5 class="card-title fw-bold">{{ .LinkTitle }}</h5>
+        <p class="card-text">{{ .Description | safeHTML | truncate 150 }}</p>
       </div>
-    </a>
+    </div>
+    {{/* </a>  */}}
   </div>
 
   {{ end }}
