--- a/layouts/partials/expertise.html
+++ b/layouts/partials/expertise.html
@@ -6,18 +6,22 @@
   {{ $pages := where .Site.RegularPages.Reverse "Section" "expertise" }}
   {{ range $pages }}
 
+  {{ $href := .RelPermalink }}
   {{ $icon := "bar-chart" }}
   {{ if in .LinkTitle "AI" }}
   {{ $icon = "signpost-split" }}
   {{ else if in .LinkTitle "Apps" }}
+  {{ $href = "#" }}
   {{ $icon = "laptop" }}
+  {{ else if in .LinkTitle "Data" }}
+  {{ $href = "#" }}
   {{ else if in .LinkTitle "Training" }}
   {{ $icon = "mortarboard-fill" }}
   {{ end }}
 
   <div class="card-group py-2">
-    <a class="link-underline-none" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip"
-      data-bs-toggle="tooltip" data-bs-title="Open our page on {{ .LinkTitle }}">
+    <a class="link-underline-none" href="{{ $href }}" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip"
+      data-bs-title="Open our page on {{ .LinkTitle }}">
       <div class="card h-100">
         <div class="card-body">
           <p class="fs-1 mb-0"><i class="bi bi-{{ $icon }}"></i></p>
