ulynks/docs#47 templates.Current for debugging
https://gohugo.io/functions/templates/current/

--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -62,4 +62,8 @@
       </div>
     </div>
   </div>
+
+  {{ if site.Params.debug }}
+  {{ partial "template-call-stack.html" . }}
+  {{ end }}
 </footer>
